--- a/static/json/languages/hi_IN.json
+++ b/static/json/languages/hi_IN.json
@@ -488,6 +488,10 @@
         "send_to_wallet": "इस वॉलेट को भेजें",
         "add_contact": "संपर्क जोड़ें",
         "remove_contact": "संपर्क हटाएं",
+        "hide_token": "छिपाएँ %{name}",
+        "unhide_token": "%{name} को अनहाइड करें",
+        "hide": "छिपाएं",
+        "unhide": "अनहाइड",
         "copy_wallet_address": "पता कॉपी करें",
         "view_wallet_on_etherscan": "Etherscan पर देखें",
         "send_contact": "संपर्क को भेजें",
@@ -498,6 +502,8 @@
       "search_tags": {
         "swap": "खरीद, बेच, व्यापार, ऑर्डर, एक्सचेंज, डेक्स, रूट्स",
         "bridge": "ट्रांसफर, चेन, रूट्स",
+        "hide_token": "छिपा हुआ है",
+        "hide_nft": "छिपा हुआ है",
         "get": "स्वैप, ब्रिज",
         "my_wallets": "मेरा, स्विच",
         "my_contacts": "मेरा",
@@ -586,7 +592,8 @@
       }
     },
     "labels": {
-      "contact": "संपर्क करें"
+      "contact": "संपर्क करें",
+      "hidden": "छिपा हुआ है"
     },
     "quick_promo": {
       "text": "मैजिक मेन्यू खोलने के लिए %{modifierSymbol}K दबाएं",
@@ -731,6 +738,11 @@
       "unknown_price": {
         "title": "%{symbol} का बाजार मूल्य अज्ञात",
         "description": "अगर आप जारी रखने का फैसला करते हैं, तो सुनिश्चित करें कि आपको उद्धृत राशि प्राप्त होने से संतुष्टि है।"
+      }
+    },
+    "promo": {
+      "degen_mode": {
+        "title": "समीक्षा को छोड़ने के लिए डेगेन मोड आज़माएं"
       }
     },
     "aggregators": {
@@ -1456,7 +1468,7 @@
       "the_more_you_use": "Rainbow का अधिक प्रयोग करें, अधिक इनाम पाएं",
       "balance_required": "वॉलेट बैलेंस आवश्यक",
       "ensure_you_have_a_balance_on": "जारी रखने के लिए, निम्नलिखित नेटवर्क्स में से किसी एक पर ईटीएच बैलेंस सुनिश्चित करें:",
-      "or_alternatively_balance_on": "या विकल्प के रूप में, पॉलीगॉन पर मैटिक बैलेंस या बीएससी पर बीएनबी बैलेंस",
+      "or_alternatively_balance_on": "या वैकल्पिक रूप से, पॉलीगॉन पर एक POL बैलेंस या BSC पर एक BNB बैलेंस",
       "fund_my_wallet": "मेरा वॉलेट फंड करें"
     },
     "error": {
@@ -1624,7 +1636,8 @@
       "unverified": "अप्रमाणित",
       "verified": "सत्यापित",
       "on_other_networks": "अन्य नेटवर्कों पर",
-      "bridge": "ब्रिज"
+      "bridge": "ब्रिज",
+      "popular": "रेनबो में लोकप्रिय"
     },
     "verified_by_rainbow": "रेनबो द्वारा सत्यापित"
   },
@@ -1653,13 +1666,18 @@
         },
         "blast": {
           "title": "ब्लास्ट क्या है?",
-          "description_1": "ब्लास्ट एक एथेरियम लेयर-2 (L2) प्लेटफॉर्म है जिसे लोकप्रिय NFT मार्केटप्लेस ब्लर के पीछे की प्रतिभाशाली टीम ने बनाया है।",
+          "description_1": "ब्लास्ट एक एथेरियम लेयर 2 प्लेटफॉर्म है जिसे ब्लर, लोकप्रिय NFT मार्केटप्लेस के पीछे की प्रतिभाशाली टीम द्वारा बनाया गया है।",
           "description_2": "चेन खुद को ईथर (ETH) और विभिन्न स्थिर मुद्राओं जैसे कि USDC, USDT, और DAI के लिए मूल यील्ड के परिचय से अलग करती है।"
         },
         "degen": {
           "title": "डेजेन क्या है?",
-          "description_1": "डेजेन चेन एक लेयर 3 नेटवर्क है जो आर्बिट्रम और एथेरियम के ऊपर चलता है।",
+          "description_1": "डीजेन चेन एक लेयर 3 नेटवर्क है जो आर्बिट्रम ऑर्बिट और एथेरियम के ऊपर चलता है।",
           "description_2": "यह फार्कास्टर समुदाय टोकन $degen में अत्यंत तेज और सस्ते लेन-देन की पेशकश करता है।"
+        },
+        "apechain": {
+          "title": "एपचेन क्या है?",
+          "description_1": "एपचेन एक लेयर 3 नेटवर्क है जो आर्बिट्रम ऑर्बिट और एथेरियम के ऊपर चलता है।",
+          "description_2": "यह एपकॉइन की उपयोगिता को काफी बढ़ाता है, एक सशक्त और गतिशील अर्थव्यवस्था को बढ़ावा देता है जो $APE द्वारा संचालित होती है।"
         },
         "custom_network": {
           "title": "यह नेटवर्क क्या है?",
