--- a/static/json/languages/ru_RU.json
+++ b/static/json/languages/ru_RU.json
@@ -488,6 +488,10 @@
         "send_to_wallet": "Отправить на этот кошелек",
         "add_contact": "Добавить как контакт",
         "remove_contact": "Удалить контакт",
+        "hide_token": "Скрыть %{name}",
+        "unhide_token": "Показать %{name}",
+        "hide": "Скрыть",
+        "unhide": "Показать",
         "copy_wallet_address": "Скопировать адрес",
         "view_wallet_on_etherscan": "Просмотр в Etherscan",
         "send_contact": "Отправить контакту",
@@ -498,6 +502,8 @@
       "search_tags": {
         "swap": "купить, продать, обменять, заказать, обмен, dex, маршруты",
         "bridge": "перевод, цепь, маршруты",
+        "hide_token": "скрытый",
+        "hide_nft": "скрытый",
         "get": "обмен, мост",
         "my_wallets": "мой, переключение",
         "my_contacts": "мои",
@@ -586,7 +592,8 @@
       }
     },
     "labels": {
-      "contact": "Свяжитесь"
+      "contact": "Свяжитесь",
+      "hidden": "Скрытый"
     },
     "quick_promo": {
       "text": "Нажмите %{modifierSymbol}K, чтобы открыть волшебное меню",
@@ -731,6 +738,11 @@
       "unknown_price": {
         "title": "Рыночная стоимость %{symbol} неизвестна",
         "description": "Если вы решите продолжить, убедитесь, что вас устраивает предложенная сумма"
+      }
+    },
+    "promo": {
+      "degen_mode": {
+        "title": "Попробуйте режим Degen, чтобы пропустить обзор"
       }
     },
     "aggregators": {
@@ -1624,7 +1636,8 @@
       "unverified": "Непроверенные",
       "verified": "Проверенные",
       "on_other_networks": "На других сетях",
-      "bridge": "Мост"
+      "bridge": "Мост",
+      "popular": "Популярное в Rainbow"
     },
     "verified_by_rainbow": "Проверено Rainbow"
   },
@@ -1660,6 +1673,11 @@
           "title": "Что такое Degen?",
           "description_1": "Degen Chain — это сеть уровня 3, которая работает поверх Arbitrum и Ethereum.",
           "description_2": "Предлагает невероятно быстрые и дешевые транзакции в токенах сообщества Farcaster $degen."
+        },
+        "apechain": {
+          "title": "Что такое ApeChain?",
+          "description_1": "ApeChain — это сеть уровня <b>3</b>, которая работает поверх Arbitrum Orbit и Ethereum.",
+          "description_2": "Она значительно улучшает утилитарность ApeCoin, содействуя развитию мощной и динамичной экономики, управляемой $APE."
         },
         "custom_network": {
           "title": "Что это за сеть?",
