--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -434,7 +434,8 @@
       "open_in_new_tab": "Open in New Tab",
       "switch_to_wallet": "Switch to Wallet",
       "send_to_contact": "Send to Contact",
-      "view": "View"
+      "view": "View",
+      "uuid_copied": "UUID copied"
     },
     "commands": {
       "names": {
@@ -497,7 +498,8 @@
         "send_contact": "Send to Contact",
         "export_addresses_as_csv": "Export Addresses as CSV",
         "enable_flashbots": "Enable Flashbots",
-        "disable_flashbots": "Disable Flashbots"
+        "disable_flashbots": "Disable Flashbots",
+        "diagnostics": "Diagnostics"
       },
       "search_tags": {
         "swap": "buy, sell, trade, order, exchange, dex, routes",
