fix: tweak superchain references

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1684,7 +1684,7 @@
         },
         "ink": {
           "title": "What's Ink?",
-          "description_1": "Ink is a cutting-edge Layer 2 (L2) blockchain built on Optimism's Superchain and released by Kraken.",
+          "description_1": "Ink is a cutting-edge Layer 2 (L2) blockchain built on the Superchain and released by Kraken.",
           "description_2": "As a natural evolution of their mission, Ink will serve as a seamless bridge to DeFi, empowering users to move onchain with confidence and ease"
         },
         "custom_network": {
