--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1687,6 +1687,16 @@
           "description_1": "Ink is a cutting-edge Layer 2 (L2) blockchain built on the Superchain and released by Kraken.",
           "description_2": "As a natural evolution of their mission, Ink will serve as a seamless bridge to DeFi, empowering users to move onchain with confidence and ease"
         },
+        "sanko": {
+          "title": "What's Sanko?",
+          "description_1": "Sanko is a Layer 2 network that runs on top of Arbitrum.",
+          "description_2": "It allows for cheaper and faster transactions, but unlike Layer 2 networks, Sanko has its own security and consensus mechanisms that differ from Ethereum."
+        },
+        "gnosis": {
+          "title": "What's Gnosis?",
+          "description_1": "Gnosis is a Layer 2 network that runs on top of Ethereum.",
+          "description_2": "It allows for cheaper and faster transactions, but unlike Layer 2 networks, Gnosis has its own security and consensus mechanisms that differ from Ethereum."
+        },
         "custom_network": {
           "title": "What's this Network?",
           "description_1": "This is a custom network added by you! Custom networks can be tailored to meet specific needs, offering unique features and capabilities.",
