add hour logic and change label

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1303,6 +1303,7 @@
     "tokens": "Tokens"
   },
   "activity": {
+    "hour": "Last Hour",
     "today": "Today",
     "yesterday": "Yesterday",
     "this_month": "This Month",
