New Crowdin updates (#1994)

--- a/static/json/languages/hi_IN.json
+++ b/static/json/languages/hi_IN.json
@@ -127,7 +127,7 @@
         "tokens": "टोकन्स",
         "cant_connect": "इस RPC एंडपॉइंट से कनेक्ट नहीं हो सकता",
         "rpc_not_responding": "प्रदान की गई RPC एंडपॉइंट प्रतिसाद नहीं दे रहा है",
-        "rainbow_default_rpc": "रेनबो",
+        "rainbow_default_rpc": "Rainbow",
         "rainbow_default": "रेनबो"
       },
       "rpc_endpoints": "RPC एंडपॉइंट्स",
@@ -1303,6 +1303,7 @@
     "tokens": "टोकन"
   },
   "activity": {
+    "hour": "पिछला घंटा",
     "today": "आज",
     "yesterday": "कल",
     "this_month": "इस महीने",
@@ -1711,8 +1712,8 @@
       "action_label": "समझे"
     },
     "send": {
-      "to_smart_contract": {
-        "description_1": "आपने एक स्मार्ट कॉन्ट्रैक्ट के लिए पता दर्ज किया है।",
+      "to_token_contract": {
+        "description_1": "आपने एक टोकन अनुबंध के लिए पता दर्ज किया है।",
         "description_2": "नदीशान अवस्थाओं को छोड़कर, आपको शायद इसे नहीं करना चाहिए। आप अपना सम्पत्ति खो सकते हैं या वह गलत स्थान पर जा सकती है।",
         "description_3": "पता दोहराएं, प्राप्ति से पुष्टि करें या पहले सपोर्ट से संपर्क करें।",
         "title": "अपने घोड़े को रोको!"
