--- a/static/json/languages/ar_AR.json
+++ b/static/json/languages/ar_AR.json
@@ -1303,6 +1303,7 @@
     "tokens": "رموز"
   },
   "activity": {
+    "hour": "آخر ساعة",
     "today": "اليوم",
     "yesterday": "أمس",
     "this_month": "هذا الشهر",
@@ -1711,10 +1712,10 @@
       "action_label": "فهمت"
     },
     "send": {
-      "to_smart_contract": {
-        "description_1": "العنوان الذي أدخلته مخصص لعقد ذكي",
-        "description_2": "ما عدا الحالات النادرة، ربما لا يجب أن تقوم بذلك. يمكنك أن تخسر أصولك أو أن تذهب إلى المكان الخاطئ",
-        "description_3": "تحقق مرتين من العنوان، وأكده مع المستلم، أو اتصل بالدعم أولا",
+      "to_token_contract": {
+        "description_1": "العنوان الذي أدخلته مخصص لعقد توكن.",
+        "description_2": "ما عدا الحالات النادرة، ربما لا يجب أن تقوم بذلك. يمكنك أن تخسر أصولك أو أن تذهب إلى المكان الخاطئ.",
+        "description_3": "تحقق مرتين من العنوان، وأكده مع المستلم، أو اتصل بالدعم أولا.",
         "title": "انتظر قليلا!"
       },
       "action_label": "فهمت"
