--- a/static/json/languages/es_419.json
+++ b/static/json/languages/es_419.json
@@ -1303,6 +1303,7 @@
     "tokens": "Tokens"
   },
   "activity": {
+    "hour": "Última hora",
     "today": "Hoy",
     "yesterday": "Ayer",
     "this_month": "Este mes",
@@ -1711,8 +1712,8 @@
       "action_label": "Entendido"
     },
     "send": {
-      "to_smart_contract": {
-        "description_1": "La dirección que ingresaste es para un contrato inteligente.",
+      "to_token_contract": {
+        "description_1": "La dirección que ingresaste es para un contrato de token.",
         "description_2": "Excepto en situaciones raras, probablemente no debas hacer esto. Podrías perder tus activos o podrían ir al lugar equivocado.",
         "description_3": "Revisa la dirección, verifícala con el destinatario o contacta al soporte primero.",
         "title": "¡Espera un momento!"
