--- a/static/json/languages/th_TH.json
+++ b/static/json/languages/th_TH.json
@@ -1303,6 +1303,7 @@
     "tokens": "โทเคน"
   },
   "activity": {
+    "hour": "ชั่วโมงที่ผ่านมา",
     "today": "วันนี้",
     "yesterday": "เมื่อวาน",
     "this_month": "เดือนนี้",
@@ -1711,8 +1712,8 @@
       "action_label": "เข้าใจแล้ว"
     },
     "send": {
-      "to_smart_contract": {
-        "description_1": "ที่อยู่ที่คุณป้อนคือสำหรับสัญญาอัจฉริยะ",
+      "to_token_contract": {
+        "description_1": "ที่อยู่ที่คุณป้อนคือสำหรับสัญญาโทเค็น",
         "description_2": "ยกเว้นสถานการณ์ที่ไม่ปกติ คุณควรไม่ทำเช่นนี้ คุณอาจจะสูญเสียสินทรัพย์หรือสินทรัพย์อาจจะไปยังสถานที่ที่ผิด",
         "description_3": "ตรวจสอบที่อยู่อีกครั้ง ตรวจสอบด้วยผู้รับ หรือติดต่อฝ่ายสนับสนุนเรื่องนี้ก่อน",
         "title": "รอสักครู่!"
