--- a/static/json/languages/tr_TR.json
+++ b/static/json/languages/tr_TR.json
@@ -1303,6 +1303,7 @@
     "tokens": "Tokenler"
   },
   "activity": {
+    "hour": "Son Saat",
     "today": "Bugün",
     "yesterday": "Dün",
     "this_month": "Bu Ay",
@@ -1711,8 +1712,8 @@
       "action_label": "Anladım"
     },
     "send": {
-      "to_smart_contract": {
-        "description_1": "Girdiğiniz adres bir akıllı sözleşme içindir.",
+      "to_token_contract": {
+        "description_1": "Girdiğiniz adres bir token sözleşmesinedir.",
         "description_2": "Nadir durumlar hariç, bunu yapmamanızı öneririz. Varlıklarınızı kaybedebilir veya yanlış yere gidebilirler.",
         "description_3": "Adresi çift kontrol edin, alıcıyla doğrulayın veya önce destekle iletişime geçin.",
         "title": "Sakin olun!"
